--- a/src/domsum.html
+++ b/src/domsum.html
@@ -95,7 +95,7 @@
         <p loading="lazy" data-aos="fade-up" data-aos-duration="1000">Partiendo de un boilerplate moderno, se ha diseñado y desarrollado la página web DOM SUM, un pequeño portal
           de gastronomía en el que se explica detalladamente cómo cocinar platos típicos de todas las regiones de
           Tailandia. </p>
-        <p loading="lazy" data-aos="fade-up" data-aos-duration="1000">Son muchas las personas que deciden viajar a Tailandia por sus playas y su clima cálida, pero no todo el
+        <p loading="lazy" data-aos="fade-up" data-aos-duration="1000">Son muchas las personas que deciden viajar a Tailandia por sus playas y su clima cálido, pero no todo el
           mundo es consciente de la riqueza gastronómica del país, con infinidad de platos, ingredientes y sabores que
           sorprenderán al viajero más curioso.</p>
           <div class="program" loading="lazy" data-aos="fade-up" data-aos-duration="1000">
@@ -190,14 +190,14 @@
     <article>
       <section>
         <ul>
-          <li style="margin-left: 0;"><a href="index.html#projects">Proyectos</a></li>
+          <li><a href="index.html#projects">Proyectos</a></li>
           <li><a href="index.html#about-me">Sobre mí</a></li>
-          <li style="margin-right: 0;"><a href="index.html#contact">Contacto</a></li>
+          <li><a href="index.html#contact">Contacto</a></li>
         </ul>
       </section>
       <section class="footer-logo">
         <a href="#index">
-          <h2 class="prueba">anaísfernández</h2>
+          <h2>anaísfernández</h2>
         </a>
       </section>
     </article>
