--- a/src/flux.html
+++ b/src/flux.html
@@ -94,9 +94,9 @@
 
 
         <p data-aos="fade-up" data-aos-duration="1000">Diseño de la identidad corporativa de <b>Flux</b>, un proyecto que empieza a tomar forma como una serie de
-          eventos musicales comisariados por Yugen Kala en la sala de conciertos Mondo Club, pero que no descarta abrir
+          eventos musicales comisariados por Yugen Kala en la sala de conciertos Mondo Club (Vigo, Galicia).</p>
+        <p data-aos="fade-up" data-aos-duration="1000">Se trata de un proyecto de constante renacimiento en el que el cambio siempre está presente, que no descarta abrir
           nuevos caminos y experiencias.</p>
-        <p data-aos="fade-up" data-aos-duration="1000">Se trata de un proyecto de constante renacimiento en el que el cambio siempre está presente.</p>
 
         <div class="program" data-aos="fade-up" data-aos-duration="1000">
 
@@ -218,14 +218,14 @@
     <article>
       <section>
         <ul>
-          <li style="margin-left: 0;"><a href="index.html#projects">Proyectos</a></li>
+          <li><a href="index.html#projects">Proyectos</a></li>
           <li><a href="index.html#about-me">Sobre mí</a></li>
-          <li style="margin-right: 0;"><a href="index.html#contact">Contacto</a></li>
+          <li><a href="index.html#contact">Contacto</a></li>
         </ul>
       </section>
       <section class="footer-logo">
         <a href="#index">
-          <h2 class="prueba">anaísfernández</h2>
+          <h2>anaísfernández</h2>
         </a>
       </section>
     </article>
