--- a/src/gracias.html
+++ b/src/gracias.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
@@ -8,85 +7,81 @@
   <title>Anaís Fernández | Gracias</title>
   <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js" type="module"></script>
   <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss">
-
   <link rel="stylesheet" type="text/css" href="./assets/styles/gracias.scss">
 </head>
 
-<body style="max-height:100vh;">
-    <!-- header -->
-    <header data-aos="fade-down" data-aos-duration="1000" style="z-index:400vh;">
-      <article class="swiper-slide">
-        <div class="swiper-slide-text">
-          <span>DISEÑO GRÁFICO</span>
-          <span class="dot"></span>
-          <span class="swiper-slide-tittle">DESARROLLO WEB FRONT-END</span>
-          <span class="dot"></span>
-          <span class="swiper-slide-tittle">DISEÑO GRÁFICO</span>
-          <span class="dot"></span>
-          <span class="swiper-slide-tittle">DESARROLLO WEB FRONT-END</span>
-          <span class="dot"></span>
-          <span class="swiper-slide-tittle">DISEÑO GRÁFICO</span>
-          <span class="dot"></span>
-          <span class="swiper-slide-tittle">DESARROLLO WEB FRONT-END</span>
-          <span class="dot"></span>
-          <span class="swiper-slide-tittle">DISEÑO GRÁFICO</span>
-          <span class="dot"></span>
-          <span class="swiper-slide-tittle">DESARROLLO WEB FRONT-END</span>
-          <span class="dot"></span>
-          <span class="swiper-slide-tittle">DISEÑO GRÁFICO</span>
-          <span class="dot"></span>
-          <span class="swiper-slide-tittle">DESARROLLO WEB FRONT-END</span>
-          <span class="dot"></span>
-          <span class="swiper-slide-tittle">DISEÑO GRÁFICO</span>
-          <span class="dot"></span>
-          <span class="swiper-slide-tittle">DESARROLLO WEB FRONT-END</span>
-          <span class="dot"></span>
-          <span class="swiper-slide-tittle">DISEÑO GRÁFICO</span>
-          <span class="dot"></span>
-          <span class="swiper-slide-tittle">DESARROLLO WEB FRONT-END</span>
-          <span class="dot"></span>
-          <span class="swiper-slide-tittle">DISEÑO GRÁFICO</span>
-          <span class="dot"></span>
-          <span class="swiper-slide-tittle">DESARROLLO WEB FRONT-END</span>
-          <span class="dot"></span>
-          <span class="swiper-slide-tittle">DISEÑO GRÁFICO</span>
-          <span class="dot"></span>
-          <span class="swiper-slide-tittle">DESARROLLO WEB FRONT-END</span>
-          <span class="dot"></span>
-          <span class="swiper-slide-tittle">DISEÑO GRÁFICO</span>
-          <span class="dot"></span>
-          <span class="swiper-slide-tittle">DESARROLLO WEB FRONT-END</span>
-          <span class="dot"></span>
+<body>
+  <!-- header -->
+  <header data-aos="fade-down" data-aos-duration="1000">
+    <article class="swiper-slide">
+      <div class="swiper-slide-text">
+        <span>DISEÑO GRÁFICO</span>
+        <span class="dot"></span>
+        <span class="swiper-slide-tittle">DESARROLLO WEB FRONT-END</span>
+        <span class="dot"></span>
+        <span class="swiper-slide-tittle">DISEÑO GRÁFICO</span>
+        <span class="dot"></span>
+        <span class="swiper-slide-tittle">DESARROLLO WEB FRONT-END</span>
+        <span class="dot"></span>
+        <span class="swiper-slide-tittle">DISEÑO GRÁFICO</span>
+        <span class="dot"></span>
+        <span class="swiper-slide-tittle">DESARROLLO WEB FRONT-END</span>
+        <span class="dot"></span>
+        <span class="swiper-slide-tittle">DISEÑO GRÁFICO</span>
+        <span class="dot"></span>
+        <span class="swiper-slide-tittle">DESARROLLO WEB FRONT-END</span>
+        <span class="dot"></span>
+        <span class="swiper-slide-tittle">DISEÑO GRÁFICO</span>
+        <span class="dot"></span>
+        <span class="swiper-slide-tittle">DESARROLLO WEB FRONT-END</span>
+        <span class="dot"></span>
+        <span class="swiper-slide-tittle">DISEÑO GRÁFICO</span>
+        <span class="dot"></span>
+        <span class="swiper-slide-tittle">DESARROLLO WEB FRONT-END</span>
+        <span class="dot"></span>
+        <span class="swiper-slide-tittle">DISEÑO GRÁFICO</span>
+        <span class="dot"></span>
+        <span class="swiper-slide-tittle">DESARROLLO WEB FRONT-END</span>
+        <span class="dot"></span>
+        <span class="swiper-slide-tittle">DISEÑO GRÁFICO</span>
+        <span class="dot"></span>
+        <span class="swiper-slide-tittle">DESARROLLO WEB FRONT-END</span>
+        <span class="dot"></span>
+        <span class="swiper-slide-tittle">DISEÑO GRÁFICO</span>
+        <span class="dot"></span>
+        <span class="swiper-slide-tittle">DESARROLLO WEB FRONT-END</span>
+        <span class="dot"></span>
+        <span class="swiper-slide-tittle">DISEÑO GRÁFICO</span>
+        <span class="dot"></span>
+        <span class="swiper-slide-tittle">DESARROLLO WEB FRONT-END</span>
+        <span class="dot"></span>
+      </div>
+    </article>
+    <nav>
+      <a href="index.html">
+        <div>
+          <h2>anaísfernández</h2>
         </div>
-      </article>
-      <nav>
-        <a href="index.html">
-          <div>
-            <h2>anaísfernández</h2>
-          </div>
-        </a>
-        <ul>
-          <li><a href="index.html#projects">Proyectos </a></li>
-          <li><a href="index.html#about-me">Sobre mí</a></li>
-          <li><a href="index.html#contact">Contacto</a></li>
-  
-        </ul>
-        <button class="menu-ham" type="button">
-          <span class="br-1"></span>
-          <span class="br-2"></span>
-          <span class="br-3"></span>
-        </button>
-      </nav>
-    </header>
-
-  <section  data-aos="fade-up" data-aos-duration="1000">
+      </a>
+      <ul>
+        <li><a href="index.html#projects">Proyectos </a></li>
+        <li><a href="index.html#about-me">Sobre mí</a></li>
+        <li><a href="index.html#contact">Contacto</a></li>
+      </ul>
+      <button class="menu-ham" type="button">
+        <span class="br-1"></span>
+        <span class="br-2"></span>
+        <span class="br-3"></span>
+      </button>
+    </nav>
+  </header>
+  <section data-aos="fade-up" data-aos-duration="1000">
     <div class="container">
       <div class="modal show" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
             <div class="modal-header modal-text-center">
-              <img src="/src/assets/images/socialemoji.gif" style="width: 12rem; padding-bottom:1rem;"  alt="memoji"
-              loading="lazy">
+              <img src="/src/assets/images/socialemoji.gif" alt="memoji" loading="lazy">
             </div>
             <div class="modal-header modal-text-center">
               <p>Gracias por el mensaje,<br>en breves me pondré en contacto contigo</p>
@@ -99,28 +94,23 @@
       </div>
     </div>
   </section>
-
-
-<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-
   <!-- footer -->
-  <footer style="position:absolute;bottom:0;">
+  <footer>
     <article>
       <section>
         <ul>
-          <li style="margin-left: 0;"><a href="index.html#projects">Proyectos</a></li>
+          <li><a href="index.html#projects">Proyectos</a></li>
           <li><a href="index.html#about-me">Sobre mí</a></li>
-          <li style="margin-right: 0;"><a href="index.html#contact">Contacto</a></li>
+          <li><a href="index.html#contact">Contacto</a></li>
         </ul>
       </section>
       <section class="footer-logo">
         <a href="#index">
-          <h2 class="prueba">anaísfernández</h2>
+          <h2>anaísfernández</h2>
         </a>
       </section>
     </article>
   </footer>
-
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init();
