--- a/src/maow.html
+++ b/src/maow.html
@@ -96,10 +96,10 @@
           un enorme sufrimiento para muchos animales.
         </p>
         <p loading="lazy" data-aos="fade-up" data-aos-duration="1000">
-          Es por ello que he decidido crear una aplicación móvil que ayudase a prevenir el abandono y cubriese las
+          Es por ello, que he decidido crear una aplicación móvil que ayudase a prevenir el abandono y cubriese las
           necesidades de los dueños. Entre la multitud de funciones que ofrece, destaca la adopción, la acogida y la
           búsqueda de cuidadores. Además, las protectoras serán unas de las grandes beneficiadas, ya que el resto de
-          usuarios podrán hacerle donaciones y apadrinar a los gatos que tengan en sus instalaciones.
+          usuarios podrán hacerles donaciones y apadrinar a los gatos que tengan en sus instalaciones.
         </p>
         <div class="program" loading="lazy" data-aos="fade-up" data-aos-duration="1000">
 
@@ -191,14 +191,14 @@
     <article>
       <section>
         <ul>
-          <li style="margin-left: 0;"><a href="index.html#projects">Proyectos</a></li>
+          <li><a href="index.html#projects">Proyectos</a></li>
           <li><a href="index.html#about-me">Sobre mí</a></li>
-          <li style="margin-right: 0;"><a href="index.html#contact">Contacto</a></li>
+          <li><a href="index.html#contact">Contacto</a></li>
         </ul>
       </section>
       <section class="footer-logo">
         <a href="#index">
-          <h2 class="prueba">anaísfernández</h2>
+          <h2>anaísfernández</h2>
         </a>
       </section>
     </article>
