--- a/src/postal.html
+++ b/src/postal.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="./assets/styles/atarashii.scss">
-    <link id="favicon" rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet">
-    <title>Anaís Fernández | Pos Tal Cual</title>
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" type="text/css" href="./assets/styles/atarashii.scss">
+  <link id="favicon" rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <title>Anaís Fernández | Pos Tal Cual</title>
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+</head>
 
 <body class="body-index">
   <header data-aos="fade-down" data-aos-duration="1000">
@@ -82,31 +82,42 @@
   </header>
 
 
-  
-  <main>    <article class="margin-header">
-    <div></div>
-    <div></div>
-  </article>
+
+  <main>
+    <article class="margin-header">
+      <div></div>
+      <div></div>
+    </article>
     <div class="flexbox-container">
       <div>
         <h1 loading="lazy" data-aos="fade-up" data-aos-duration="1000">POS TAL CUAL</h1>
         <h3 loading="lazy" data-aos="fade-up" data-aos-duration="1000">Diseño postal (concurso de postales) – 2022</h3>
-        <p loading="lazy" data-aos="fade-up" data-aos-duration="1000"><b>Pos Tal Cual</b> es un concurso de postales creado la Facultad de Bellas Artes de Pontevedra en Enero de 2022. La temática y la técnica eran totalmente libres y las ganadoras recibirían como premio el formar parte de una exposición en Rumore Lounge Pub, un restaurante situado en Pontevedra. 
+        <p loading="lazy" data-aos="fade-up" data-aos-duration="1000"><b>Pos Tal Cual</b> es un concurso de postales
+          creado por la Facultad de Bellas Artes de Pontevedra en enero de 2022. La temática y la técnica eran totalmente
+          libres y quienes resultaron ganadores recibieron como premio el formar parte de una exposición en Rumore Lounge Pub, un
+          restaurante situado en Pontevedra.
         </p>
-        <p loading="lazy" data-aos="fade-up" data-aos-duration="1000">En mi caso, he presentado las siguientes candidaturas:</p>
+        <p loading="lazy" data-aos="fade-up" data-aos-duration="1000">En mi caso, he presentado las siguientes
+          candidaturas:</p>
         <div class="program" loading="lazy" data-aos="fade-up" data-aos-duration="1000">
           <img src="./assets/images/photoshop.png" alt="Photoshop icon" loading="lazy">
           <img src="./assets/images/illustrator.png" alt="Illustrator icon" loading="lazy">
-          </div>
         </div>
+      </div>
       <div>
         <div class="flex-container">
-          <div class="flex-item flex-pc"><img src="./assets/images/4.1.postal.jpg" alt="Postal" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-pc"><img src="./assets/images/4.2.postal.jpg" alt="Postal" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-pc"><img src="./assets/images/4.3.postal.jpg" alt="Postal" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-pc"><img src="./assets/images/4.4.postal.jpg" alt="Postal" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-pc"><img src="./assets/images/4.5.postal.jpg" alt="Postal" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-pc"><img src="./assets/images/4.6.postal.jpg" alt="Postal" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item flex-pc"><img src="./assets/images/4.1.postal.jpg" alt="Postal" loading="lazy"
+              data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item flex-pc"><img src="./assets/images/4.2.postal.jpg" alt="Postal" loading="lazy"
+              data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item flex-pc"><img src="./assets/images/4.3.postal.jpg" alt="Postal" loading="lazy"
+              data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item flex-pc"><img src="./assets/images/4.4.postal.jpg" alt="Postal" loading="lazy"
+              data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item flex-pc"><img src="./assets/images/4.5.postal.jpg" alt="Postal" loading="lazy"
+              data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item flex-pc"><img src="./assets/images/4.6.postal.jpg" alt="Postal" loading="lazy"
+              data-aos="fade-up" data-aos-duration="1000"></div>
         </div>
         <section class="recomendations-recipe">
           <h1>Descubre más proyectos<spam> de diseño gráfico y web</spam>
@@ -115,8 +126,8 @@
 
             <a href="atarashii.html">
               <div class="recomendations-object">
-                <img src="./assets/images/20.1.recomendation.jpg" alt="Atarashii Gakko recomendation" data-aos="fade-right"
-                  data-aos-duration="1000">
+                <img src="./assets/images/20.1.recomendation.jpg" alt="Atarashii Gakko recomendation"
+                  data-aos="fade-right" data-aos-duration="1000">
               </div>
             </a>
 
@@ -158,7 +169,7 @@
             <a href="radicaleslibres.html">
               <div class="recomendations-object">
                 <img src="./assets/images/20.9.recomendation.jpg" alt="Radicales Libres recomendation"
-                data-aos="fade-right" data-aos-duration="1000">
+                  data-aos="fade-right" data-aos-duration="1000">
               </div>
             </a>
 
@@ -170,14 +181,14 @@
     <article>
       <section>
         <ul>
-          <li style="margin-left: 0;"><a href="index.html#projects">Proyectos</a></li>
+          <li><a href="index.html#projects">Proyectos</a></li>
           <li><a href="index.html#about-me">Sobre mí</a></li>
-          <li style="margin-right: 0;"><a href="index.html#contact">Contacto</a></li>
+          <li><a href="index.html#contact">Contacto</a></li>
         </ul>
       </section>
       <section class="footer-logo">
         <a href="#index">
-          <h2 class="prueba">anaísfernández</h2>
+          <h2>anaísfernández</h2>
         </a>
       </section>
     </article>
