--- a/src/radicaleslibres.html
+++ b/src/radicaleslibres.html
@@ -93,9 +93,11 @@
       <div>
         <h1 data-aos="fade-up" data-aos-duration="1000">RADICALES LIBRES</h1>
         <h3 data-aos="fade-up" data-aos-duration="1000">Identidad corporativa – 2020</h3>
-        <p data-aos="fade-up" data-aos-duration="1000">Radicales libres es una feria de artivismo que tendrá lugar en A Coruña, Galicia. En ella se llevarán a
+        <p data-aos="fade-up" data-aos-duration="1000">Radicales libres es una feria de artivismo que tuvo lugar en A
+          Coruña, Galicia. En ella se llevaron a
           cabo charlas, propuestas, acciones y talleres con autores y/o colectivos que destacan en esta disciplina.</p>
-        <p data-aos="fade-up" data-aos-duration="1000">El artivismo no es un arte oposicional (no trata de criticar u oponerse sistemáticamente a nada), sino que
+        <p data-aos="fade-up" data-aos-duration="1000">El artivismo no es un arte oposicional (no trata de criticar u
+          oponerse sistemáticamente a nada), sino que
           trabaja con imágenes alternativas, metáforas, ironía, humor, provocación o compasión para generar un proceso
           informativo. Lo que lo distingue del arte político es el carácter progresivo, en desarrollo, que lleva a
           trabajar dentro de los contextos, a implicarse directamente en el espacio social público y a representar en
@@ -109,26 +111,40 @@
       </div>
       <div>
         <div class="flex-container">
-          <div class="flex-item flex-cartel"><img src="./assets/images/9.1.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-cartel flex-item2"><img src="./assets/images/9.2.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item flex-cartel"><img src="./assets/images/9.1.radicales-libres.jpg" alt="Radicales Libres"
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item flex-cartel flex-item2"><img src="./assets/images/9.2.radicales-libres.jpg"
+              alt="Radicales Libres" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-instagram insta-1">
-            <img src="./assets/images/9.3.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up" data-aos-duration="1000">
-            <img src="./assets/images/9.4.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up" data-aos-duration="1000">
+            <img src="./assets/images/9.3.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up"
+              data-aos-duration="1000">
+            <img src="./assets/images/9.4.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up"
+              data-aos-duration="1000">
           </div>
           <div class="flex-item flex-instagram insta-2">
-            <img src="./assets/images/9.6.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up" data-aos-duration="1000">
-            <img src="./assets/images/9.7.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up" data-aos-duration="1000">
+            <img src="./assets/images/9.7.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up"
+              data-aos-duration="1000">
+            <img src="./assets/images/9.6.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up"
+              data-aos-duration="1000">
           </div>
           <div class="flex-item flex-instagram insta-3">
-            <img src="./assets/images/9.8.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up" data-aos-duration="1000">
-            <img src="./assets/images/9.9.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up" data-aos-duration="1000">
+            <img src="./assets/images/9.8.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up"
+              data-aos-duration="1000">
+            <img src="./assets/images/9.9.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up"
+              data-aos-duration="1000">
           </div>
-          <div class="flex-item"><img src="./assets/images/9.10.radicales-libres.png" alt="Radicales Libres" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/9.11.radicales-libres.png" alt="Radicales Libres" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-none"><img src="./assets/images/9.12.radicales-libres.png" alt="Radicales Libres" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item  flex-poster"><img src="./assets/images/9.13.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-merch"><img src="./assets/images/9.14.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item  flex-merch"><img src="./assets/images/9.15.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/9.10.radicales-libres.png" alt="Radicales Libres"
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/9.11.radicales-libres.png" alt="Radicales Libres"
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item flex-none"><img src="./assets/images/9.12.radicales-libres.png" alt="Radicales Libres"
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item  flex-poster"><img src="./assets/images/9.13.radicales-libres.jpg"
+              alt="Radicales Libres" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item flex-merch"><img src="./assets/images/9.14.radicales-libres.jpg" alt="Radicales Libres"
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item  flex-merch"><img src="./assets/images/9.15.radicales-libres.jpg" alt="Radicales Libres"
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
         </div>
         <section class="recomendations-recipe">
           <h1>Descubre más proyectos<spam> de diseño gráfico y web</spam>
@@ -137,8 +153,8 @@
 
             <a href="atarashii.html">
               <div class="recomendations-object">
-                <img src="./assets/images/20.1.recomendation.jpg" alt="Atarashii Gakko recomendation" data-aos="fade-right"
-                  data-aos-duration="1000">
+                <img src="./assets/images/20.1.recomendation.jpg" alt="Atarashii Gakko recomendation"
+                  data-aos="fade-right" data-aos-duration="1000">
               </div>
             </a>
 
@@ -192,14 +208,14 @@
     <article>
       <section>
         <ul>
-          <li style="margin-left: 0;"><a href="index.html#projects">Proyectos</a></li>
+          <li><a href="index.html#projects">Proyectos</a></li>
           <li><a href="index.html#about-me">Sobre mí</a></li>
-          <li style="margin-right: 0;"><a href="index.html#contact">Contacto</a></li>
+          <li><a href="index.html#contact">Contacto</a></li>
         </ul>
       </section>
       <section class="footer-logo">
         <a href="#index">
-          <h2 class="prueba">anaísfernández</h2>
+          <h2>anaísfernández</h2>
         </a>
       </section>
     </article>
