--- a/src/404.html
+++ b/src/404.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
@@ -8,7 +7,6 @@
   <title>Anaís Fernández | Error 404</title>
   <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js" type="module"></script>
   <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss">
-
   <link rel="stylesheet" type="text/css" href="./assets/styles/gracias.scss">
 </head>
 
@@ -69,7 +67,6 @@
         <li><a href="index.html#projects">Proyectos </a></li>
         <li><a href="index.html#about-me">Sobre mí</a></li>
         <li><a href="index.html#contact">Contacto</a></li>
-
       </ul>
       <button class="menu-ham" type="button">
         <span class="br-1"></span>
@@ -78,15 +75,13 @@
       </button>
     </nav>
   </header>
-
   <section data-aos="fade-up" data-aos-duration="1000">
     <div class="container">
       <div class="modal show" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
             <div class="modal-header modal-text-center">
-              <img src="/src/assets/images/socialemoji-sad.gif" style="width: 12rem; padding-bottom:1rem;" alt="memoji"
-                loading="lazy">
+              <img src="/src/assets/images/socialemoji-sad.gif" alt="memoji" loading="lazy">
             </div>
             <div class="modal-header modal-text-center">
               <p>Lo siento mucho,<br>se ha producido un error en la página</p>
@@ -99,33 +94,28 @@
       </div>
     </div>
   </section>
-
-
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-
   <!-- footer -->
-  <footer style="position:absolute;bottom:0;">
+  <footer>
     <article>
       <section>
         <ul>
-          <li style="margin-left: 0;"><a href="index.html#projects">Proyectos</a></li>
+          <li><a href="index.html#projects">Proyectos</a></li>
           <li><a href="index.html#about-me">Sobre mí</a></li>
-          <li style="margin-right: 0;"><a href="index.html#contact">Contacto</a></li>
+          <li><a href="index.html#contact">Contacto</a></li>
         </ul>
       </section>
       <section class="footer-logo">
         <a href="#index">
-          <h2 class="prueba">anaísfernández</h2>
+          <h2>anaísfernández</h2>
         </a>
       </section>
     </article>
   </footer>
-
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
   <script>
     AOS.init();
   </script>
-  <script src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
 </body>
 
 </html>
