--- a/src/gig.html
+++ b/src/gig.html
@@ -91,13 +91,13 @@
       <div>
         <h1 loading="lazy" data-aos="fade-up" data-aos-duration="1000">GIG</h1>
         <h3 loading="lazy" data-aos="fade-up" data-aos-duration="1000">Diseño de app móvil – 2020</h3>
-        <p loading="lazy" data-aos="fade-up" data-aos-duration="1000">El confinamiento ha provocado la cancelación de numerosos conciertos, lo que ha provocada que los músicos
+        <p loading="lazy" data-aos="fade-up" data-aos-duration="1000">El confinamiento ha provocado la cancelación de numerosos conciertos, lo que ha generado que los músicos
           comenzaran a ofrecer espectáculos gratuitos en directo por redes sociales, donde primaba la pasión y no la
           calidad técnica.</p>
         <p loading="lazy" data-aos="fade-up" data-aos-duration="1000"> GIG es una plataforma de e-commerce de proximidad donde los artistas locales pueden retransmitir sus
           conciertos en directo a cambio del pago de una entrada virtual. Una alternativa a las redes sociales o
           videollamadas no monetizables, con herramientas específicas para gestionar conciertos online. Con esto no
-          pretendo emular la esencia de un concierto en directo, sino crear nuevas experiencias y modos de consumo.
+          se pretende emular la esencia de un concierto en directo, sino crear nuevas experiencias y modos de consumo.
         </p>
         <div class="program" loading="lazy" data-aos="fade-up" data-aos-duration="1000">
           <img src="./assets/images/figma.png" alt="Figma icon" loading="lazy">
@@ -181,14 +181,14 @@
     <article>
       <section>
         <ul>
-          <li style="margin-left: 0;"><a href="index.html#projects">Proyectos</a></li>
+          <li><a href="index.html#projects">Proyectos</a></li>
           <li><a href="index.html#about-me">Sobre mí</a></li>
-          <li style="margin-right: 0;"><a href="index.html#contact">Contacto</a></li>
+          <li><a href="index.html#contact">Contacto</a></li>
         </ul>
       </section>
       <section class="footer-logo">
         <a href="#index">
-          <h2 class="prueba">anaísfernández</h2>
+          <h2>anaísfernández</h2>
         </a>
       </section>
     </article>
