--- a/src/atarashii.html
+++ b/src/atarashii.html
@@ -98,6 +98,7 @@
         <p loading="lazy" data-aos="fade-up" data-aos-duration="1000">En la página web se puede encontrar información
           sobre cada uno de los miembros del grupo, los detalles de sus
           próximos eventos y conciertos, toda su discografía y un blog con sus noticias más recientes.</p>
+          <p loading="lazy" data-aos="fade-up" data-aos-duration="1000" class="project-link" >Puedes visitar el proyecto: <a href="https://atarashii-gakko.netlify.app" target="_blank">www.atarashii-gakko.com</a></p>
         <div class="program" loading="lazy" data-aos="fade-up" data-aos-duration="1000">
           <img src="./assets/images/figma.png" alt="figma icon" loading="lazy">
           <img src="./assets/images/html.png" alt="HTML icon" loading="lazy">
